--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <!--Google Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
+
+  <!--CSS files-->
+  <link rel="stylesheet" href="./css/_general.scss">
+  <link rel="stylesheet" href="./css/_mobile.scss">
+  <link rel="stylesheet" href="./css/_desktop.scss">
   
   <title>Frontend Mentor | 3-column preview card component</title>
 
@@ -15,20 +25,37 @@
   </style>
 </head>
 <body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
+  <main class="container">
+    <div class="card">
+      <section class="sedan">
+        <img src="images/icon-sedans.svg" alt="icon-sedans">
+        <h3 class="title">Sedans</h3>
+        <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+        or on your next road trip.</p>
+        <button class="btn">Learn more</button>
+      </section>
 
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
+      <section class="suv">
+        <img src="images/icon-suvs.svg" alt="icon-suvs">
+        <h3 class="title">SUVS</h3>
+        <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+        and off-road adventures.</p>
+        <button class="btn">Learn more</button>
+      </section>
+
+      <section class="luxury">
+        <img src="images/icon-luxury.svg" alt="icon-luxury">
+        <h3 class="title">Luxury</h3>
+        <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+        rental and arrive in style.</p>
+        <button class="btn">Learn more</button>
+      </section>
+  </div>  
+
+</main>
   
-  <div class="attribution">
+  <div role="contentinfo" class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
