--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
 
   <!--CSS files-->
-  <link rel="stylesheet" href="./css/_general.scss">
-  <link rel="stylesheet" href="./css/_mobile.scss">
-  <link rel="stylesheet" href="./css/_desktop.scss">
+  <link rel="stylesheet" href="./css/styles.css">
   
   <title>Frontend Mentor | 3-column preview card component</title>
 
@@ -26,38 +24,36 @@
 </head>
 <body>
 
-  <main class="container">
-    <div class="card">
+    <div role="main" class="card">
       <section class="sedan">
         <img src="images/icon-sedans.svg" alt="icon-sedans">
-        <h3 class="title">Sedans</h3>
+        <h2 class="title">Sedans</h3>
         <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.</p>
-        <button class="btn">Learn more</button>
+        <button class="btn btn1">Learn more</button>
       </section>
 
       <section class="suv">
         <img src="images/icon-suvs.svg" alt="icon-suvs">
-        <h3 class="title">SUVS</h3>
+        <h2 class="title">SUVS</h3>
         <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
         and off-road adventures.</p>
-        <button class="btn">Learn more</button>
+        <button class="btn btn2">Learn more</button>
       </section>
 
       <section class="luxury">
         <img src="images/icon-luxury.svg" alt="icon-luxury">
-        <h3 class="title">Luxury</h3>
+        <h2 class="title">Luxury</h3>
         <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.</p>
-        <button class="btn">Learn more</button>
+        <button class="btn btn3">Learn more</button>
       </section>
   </div>  
 
-</main>
   
   <div role="contentinfo" class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="http://github.com/ogolajecinta">Jecinta Ogola</a>.
   </div>
 </body>
 </html>
